Combining everything into index.html

--- a/src/chart-files/boxplot_walc - grade/boxplot_walc_grade.html
+++ b/src/chart-files/boxplot_walc - grade/boxplot_walc_grade.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" class="animate__animated animate__slideInRight">
+
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="../../main-style.css">
-  <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
-  <script src="https://d3js.org/d3.v4.min.js"></script>
- 
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../main-style.css">
+    <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<head> 
+    <!-- partial:index.partial.html -->
 
-</head>
-<div id="my_dataviz"></div>
-<script  src="./script.js"></script>
+    <head>
+
+    </head>
+    <div id="my_dataviz" float="left"></div>
+    <div id="information" float="right">
+        <h3>From this plot i can infer the following details:</h3>
+
+        <li>The Range of grade for the people who drink once in a week is 15</li>
+        <li>The Range of grade for the people who drink twice in a week is 13</li>
+        <li>The Range of grade for the people who drink thrice in a week is 16</li>
+        <li>The Range of grade for the people who drink four times a week is 12</li>
+        <li>The Range of grade for the people who drink once in a week is 13</li>
+        <li>The highest Rank for scored by the persons who drink once in a week</li>
+        <li> lowest Rank was scored by the person who drink thrice a week</li>
+    </div>
+    <script src="./script.js"></script>
+
 </html>
