--- a/src/chart-files/guardian_multi_boxplot/guardian_multi_boxplot.html
+++ b/src/chart-files/guardian_multi_boxplot/guardian_multi_boxplot.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="animate__animated animate__fadeInUp">
 
 <head>
     <meta charset="UTF-8">
@@ -25,6 +25,15 @@
     </body>
     <!-- partial -->
     <script src="./script.js"></script>
+
+    <div id="information">
+        <h3>From this plot i can infer the following details:</h3>
+
+        <li>The maximum grade is scored by the student who drinks once in a week and guarded by mother or father</li>
+        <li>Even if the student drinks five times a day if he is guarded by mother he can score more grade</li>
+        <li>The minimum grade is scored by the student who drinks thrice in a week and guarded by mother</li>
+
+    </div>
 
 </body>
 
