--- a/src/chart-files/histogram/histogram.html
+++ b/src/chart-files/histogram/histogram.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" class="animate__animated animate__flash">
+
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./style.css">
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
-  <link rel="stylesheet" href="../../main-style.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
+    <link rel="stylesheet" href="../../main-style.css">
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<head> 
+    <!-- partial:index.partial.html -->
 
-</head>
-<div id="Histogram"></div>
+    <head>
 
-<script  src="./script.js"></script>
+    </head>
+    <div id="container">
+        <div id="Histogram" float="left"></div>
+
+        <div id="information" float="right">
+            <h3>I can Infer the follow details:</h3>
+
+            <li>There is no person in the sample who didn't drink at all</li>
+            <li>Most of them drink once in the week</li>
+            <li>The student who drink 5 times a week is very less</li>
+        </div>
+    </div>
+
+
+    <script src="./script.js"></script>
+
 </html>
