--- a/src/chart-files/plotting/plotting.html
+++ b/src/chart-files/plotting/plotting.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en" class="animate__animated animate__lightSpeedInLeft">
+
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./style.css">
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
-  <link rel="stylesheet" href="../../main-style.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
+    <link rel="stylesheet" href="../../main-style.css">
 
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<head> 
+    <!-- partial:index.partial.html -->
 
-</head>
-<div>
-  <div id="Plotting_G1_G2"> 
+    <head>
 
-  </div>
-  <div id="Plotting_G2_G3">
-  </div>
+    </head>
+    <div>
+        <div id="Plotting_G1_G2">
+
+        </div>
+        <div id="Plotting_G2_G3">
+        </div>
 
 
-</div>
-<script  src="./script.js"></script>
+    </div>
+    <script src="./script.js"></script>
+
+    <div id="information">
+        <h2>Sometimes, alcohol has nothing to do with grades...</h2>
+
+        <h3>From this plot it can infered the following details:</h3>
+
+        <li>Those who get good grades (>12.5) in G1 no matter what gender he/she belongs, no matter how much he/she consumes alcohol, he/she will get good grades in the G2
+        <li>Those who get less grade in G1 no matter what gender he/she belongs, no matter how much he/she consumes alcohol he/she will get less grades in the G2
+        <li>Also there lies some outliers which doesn't follow this pattern
+    </div>
+
 </html>
