--- a/index.html
+++ b/index.html
@@ -8,140 +8,136 @@
     <link rel="stylesheet" href="./src/main-style.css">
     <link rel="stylesheet" href="./node_modules/animate.css/animate.css">
     <script src="https://d3js.org/d3.v4.js"></script>
-    <script src="./src/chart-files/heatmap/script.js"></script>
+    <link href="./onepagescroll.css" rel="stylesheet">
+    <script src="./onepagescroll.js"></script>
     <title>Alcoholism in students</title>
 </head>
 
 <body>
-    <section id="section1">
-        <div id="main-content">
-            <h1 id="main-topic">Can an alcoholic be good in studies?</h1>
-            <h2 id="punchline">When a little more alcohol<br>speaks more the we expected...</h2>
-            <img src="./src/images/wine-drawing.png">
-        </div>
-        <div id="side-details">
-
-
-            <!------
-            <h4>What needs to be considered?</h4>
-            <ul>
-                <li>How the data is correlated?</li>
-                <li>How previous grade affects the upcoming one</li>
-                <li> How Weekly alcohol consumption is distributed</li>
-                <li>How the grade and walc related(basic level)</li>
-                <li>How the parenting and walc affects the grade</li>
-                <li>Finally how the grade and walc related</li>
-            </ul>
-            --->
-        </div>
-        <div class="scroll-button">
-            <input type="button" value="SCROLL" onClick="document.getElementById('section2').scrollIntoView();" />
-        </div>
-        
-    </section>
-    <section id="section2">
-
-        <br>
-        <h2>List of attributes:</h2>
-        <p>
-            1. school - student's school (binary: 'GP' - Gabriel Pereira or 'MS' - Mousinho da Silveira) <br>
-            2. sex - student's sex (binary: 'F' - female or 'M' - male) <br>
-            3. age - student's age (numeric: from 15 to 22)<br>
-            4. address - student's home address type (binary: 'U' - urban or 'R' - rural)<br>
-            5. famsize - family size (binary: 'LE3' - less or equal to 3 or 'GT3' - greater than 3)<br>
-            6. Pstatus - parent's cohabitation status (binary: 'T' - living together or 'A' - apart)<br>
-            7. Medu - mother's education (numeric: 0 - none, 1 - primary education (4th grade), 2 – 5th to 9th grade, 3
-            –
-            secondary education or 4 – higher education)<br>
-            8. Fedu - father's education (numeric: 0 - none, 1 - primary education (4th grade), 2 – 5th to 9th grade, 3
-            –
-            secondary education or 4 – higher education)<br>
-            9. Mjob - mother's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or
-            police), 'at_home' or 'other')<br>
-            10. Fjob - father's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative or
-            police), 'at_home' or 'other')<br>
-            11. reason - reason to choose this school (nominal: close to 'home', school 'reputation', 'course'
-            preference or
-            'other')<br>
-            12. guardian - student's guardian (nominal: 'mother', 'father' or 'other')<br>
-            13. traveltime - home to school travel time (numeric: 1 - 1 hour)<br>
-            14. studytime - weekly study time (numeric: 1 - 10 hours)<br>
-            15. failures - number of past class failures (numeric: n if 1<=n<3, else 4) <br>
-                16. schoolsup - extra educational support (binary: yes or no) <br>
-                17. famsup - family educational support (binary: yes or no) <br>
-                18. paid - extra paid classes within the course subject (Math or Portuguese) (binary: yes or no) <br>
-                19. activities -extra-curricular activities (binary: yes or no) <br>
-                20. nursery - attended nursery school (binary: yes or no)<br>
-                21. higher - wants to take higher education (binary: yes or no) <br>
-                22. internet - Internet access at home(binary: yes or no) <br>
-                23. romantic - with a romantic relationship (binary: yes or no) <br>
-                24. famrel - quality offamily relationships (numeric: from 1 - very bad to 5 - excellent) <br>
-                25. freetime - free time after school(numeric: from 1 - very low to 5 - very high) <br>
-                26. goout - going out with friends (numeric: from 1 - very lowto 5 - very high) <br>
-                27. Dalc - workday alcohol consumption (numeric: from 1 - very low to 5 - very high) <br>
-                28. Walc - weekend alcohol consumption (numeric: from 1 - very low to 5 - very high) <br>
-                29. health - current health status (numeric: from 1 - very bad to 5 - very good) <br>
-                30. absences - number of school absences (numeric: from 0 to 93) <br>
-                These grades are related with the course subject, Math or Portuguese: <br>
-                <li>G1 - first period grade(numeric: from 0 to 20)</li>
-                <li>G2 - second period grade (numeric: from 0 to 20)</li>
-                <li>G3 - final grade (numeric: from 0 to 20, output target)</li>
-        </p>
-        <div class="scroll-button">
-            <input type="button" value="BACK" onClick="document.getElementById('section1').scrollIntoView();" />
-            <input type="button" value="SCROLL" onClick="document.getElementById('section3').scrollIntoView();" />
-        </div>
-    </section>
-
-    <section id="section3">
-        <embed type="text/html" src="./src/chart-files/heatmap/heatmap-correlation.html"
-            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="50%" height="90%">
-            <div class="scroll-button">
-                <input type="button" value="BACK" onClick="document.getElementById('section2').scrollIntoView();" />
-                <input type="button" value="SCROLL" onClick="document.getElementById('section4').scrollIntoView();" />
+    <div id="fullpage">
+        <section id="section1" class="wide" float="right">
+            <div id="main-content">
+                <h1 id="main-topic">Can an alcoholic be good in studies?</h1>
+                <h2 id="punchline">When it is all about the usage...</h2>
+                <img src="./src/images/wine-drawing.png">
             </div>
-    </section>
+            <div id="side-details">
+                <content>
+                    <h4>Content:</h4>
+                    <ul>
+                        <li>How the data is correlated?</li>
+                        <li>How previous grade affects the upcoming one</li>
+                        <li> How Weekly alcohol consumption is distributed</li>
+                        <li>How the grade and walc related(basic level)</li>
+                        <li>How the parenting and walc affects the grade</li>
+                    </ul>
+                </content>
 
-    <section id="section4">
-        <embed type="text/html" src="./src/chart-files/plotting/plotting.html"
-            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="100%" height="80%">
-            <div class="scroll-button">
-                <input type="button" value="BACK" onClick="document.getElementById('section3').scrollIntoView();" />
-                <input type="button" value="SCROLL" onClick="document.getElementById('section5').scrollIntoView();" />
+
             </div>
-    </section>
 
-    <section id="section5">
-        <embed type="text/html" src="./src/chart-files/histogram/histogram.html"
-            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="100%" height="80%">
 
-            <div class="scroll-button">
-                <input type="button" value="BACK" onClick="document.getElementById('section4').scrollIntoView();" />
-                <input type="button" value="SCROLL" onClick="document.getElementById('section6').scrollIntoView();" />
-            </div>
-    </section>
 
-    <section id="section6">
-        <embed type="text/html" src="./src/chart-files/boxplot_walc - grade/boxplot_walc_grade.html"
-            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="100%" height="80%">
-            <div class="scroll-button">
-                <input type="button" value="BACK" onClick="document.getElementById('section5').scrollIntoView();" />
-                <input type="button" value="SCROLL" onClick="document.getElementById('section7').scrollIntoView();" />
-            </div>
-    </section>
 
-    <section id="section7">
-        <embed type="text/html" src="./src/chart-files/guardian_multi_boxplot/guardian_multi_boxplot.html"
-            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="100%" height="80%">
-            <div class="scroll-button">
-                <input type="button" value="BACK" onClick="document.getElementById('section6').scrollIntoView();" />
-                <input type="button" value="SCROLL" onClick="document.getElementById('section8').scrollIntoView();" />
-            </div>
-    </section>
+        </section>
 
-    <section id="section8">
-        
-    </section>
+
+
+        <section id="section2" class="wide">
+
+            <br>
+            <h2>List of attributes:</h2>
+            <p>
+                1. school - student's school (binary: 'GP' - Gabriel Pereira or 'MS' - Mousinho da Silveira) <br>
+                2. sex - student's sex (binary: 'F' - female or 'M' - male) <br>
+                3. age - student's age (numeric: from 15 to 22)<br>
+                4. address - student's home address type (binary: 'U' - urban or 'R' - rural)<br>
+                5. famsize - family size (binary: 'LE3' - less or equal to 3 or 'GT3' - greater than 3)<br>
+                6. Pstatus - parent's cohabitation status (binary: 'T' - living together or 'A' - apart)<br>
+                7. Medu - mother's education (numeric: 0 - none, 1 - primary education (4th grade), 2 – 5th to 9th
+                grade, 3
+                –
+                secondary education or 4 – higher education)<br>
+                8. Fedu - father's education (numeric: 0 - none, 1 - primary education (4th grade), 2 – 5th to 9th
+                grade, 3
+                –
+                secondary education or 4 – higher education)<br>
+                9. Mjob - mother's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g. administrative
+                or
+                police), 'at_home' or 'other')<br>
+                10. Fjob - father's job (nominal: 'teacher', 'health' care related, civil 'services' (e.g.
+                administrative or
+                police), 'at_home' or 'other')<br>
+                11. reason - reason to choose this school (nominal: close to 'home', school 'reputation', 'course'
+                preference or
+                'other')<br>
+                12. guardian - student's guardian (nominal: 'mother', 'father' or 'other')<br>
+                13. traveltime - home to school travel time (numeric: 1 - 1 hour)<br>
+                14. studytime - weekly study time (numeric: 1 - 10 hours)<br>
+                15. failures - number of past class failures (numeric: n if 1<=n<3, else 4) <br>
+                    16. schoolsup - extra educational support (binary: yes or no) <br>
+                    17. famsup - family educational support (binary: yes or no) <br>
+                    18. paid - extra paid classes within the course subject (Math or Portuguese) (binary: yes or no)
+                    <br>
+                    19. activities -extra-curricular activities (binary: yes or no) <br>
+                    20. nursery - attended nursery school (binary: yes or no)<br>
+                    21. higher - wants to take higher education (binary: yes or no) <br>
+                    22. internet - Internet access at home(binary: yes or no) <br>
+                    23. romantic - with a romantic relationship (binary: yes or no) <br>
+                    24. famrel - quality offamily relationships (numeric: from 1 - very bad to 5 - excellent) <br>
+                    25. freetime - free time after school(numeric: from 1 - very low to 5 - very high) <br>
+                    26. goout - going out with friends (numeric: from 1 - very lowto 5 - very high) <br>
+                    27. Dalc - workday alcohol consumption (numeric: from 1 - very low to 5 - very high) <br>
+                    28. Walc - weekend alcohol consumption (numeric: from 1 - very low to 5 - very high) <br>
+                    29. health - current health status (numeric: from 1 - very bad to 5 - very good) <br>
+                    30. absences - number of school absences (numeric: from 0 to 93) <br>
+                    These grades are related with the course subject, Math or Portuguese: <br>
+                    <li>G1 - first period grade(numeric: from 0 to 20)</li>
+                    <li>G2 - second period grade (numeric: from 0 to 20)</li>
+                    <li>G3 - final grade (numeric: from 0 to 20, output target)</li>
+            </p>
+
+        </section>
+
+
+
+        <section id="section3" class="wide">
+            <embed type="text/html" src="./src/chart-files/heatmap/heatmap-correlation.html"
+                style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="90%" height="100%">
+
+        </section>
+
+        <section id="section4" class="wide">
+            <embed type="text/html" src="./src/chart-files/plotting/plotting.html"
+                style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="80%" height="90%">
+
+        </section>
+
+        <section id="section5" class="wide">
+            <embed type="text/html" src="./src/chart-files/histogram/histogram.html" style="overflow: hidden;"
+                width="50%" height="90%">
+
+
+        </section>
+
+        <section id="section6" class="wide">
+            <embed type="text/html" src="./src/chart-files/boxplot_walc - grade/boxplot_walc_grade.html"
+                style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="50%" height="100%">
+
+        </section>
+
+        <section id="section7" class="wide">
+            <embed type="text/html" src="./src/chart-files/guardian_multi_boxplot/guardian_multi_boxplot.html"
+                style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="100%" height="80%">
+
+        </section>
+    </div>
+
+
+    <script>
+        onepagescroll('div#fullpage');
+    </script>
+
 </body>
 
 </html>
