--- a/src/chart-files/heatmap/heatmap-correlation.html
+++ b/src/chart-files/heatmap/heatmap-correlation.html
@@ -7,7 +7,7 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <link rel="stylesheet" href="../../main-style.css">
     <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
