--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
                 style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="100%" height="80%">
 
         </section>
+
+        <section id="section8" class="wide">
+            <embed type="text/html" src="./src/chart-files/swamplot/src/swarmplot.html"
+                style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="100%" height="80%">
+
+        </section>
     </div>
 
 
