--- a/src/chart-files/boxplot_walc - grade/boxplot_walc_grade.html
+++ b/src/chart-files/boxplot_walc - grade/boxplot_walc_grade.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Plotly.js Grouped Box Plot</title>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
+<html lang="en" class="animate__animated animate__fadeInDown">
 
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <head>
-	<!-- Load plotly.js into the DOM -->
-	<script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+    <meta charset="UTF-8">
+    <title>CodePen - Plotly.js Grouped Box Plot</title>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
+    <link rel="stylesheet" href="../../main-style.css">
+
 </head>
 
 <body>
-	<div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
-</body>
-<!-- partial -->
-  <script  src="./script.js"></script>
+    <!-- partial:index.partial.html -->
+
+    <head>
+        <!-- Load plotly.js into the DOM -->
+        <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+    </head>
+
+    <body>
+        <div id='myDiv'>
+            <!-- Plotly chart will be drawn inside this DIV -->
+        </div>
+    </body>
+    <!-- partial -->
+    <script src="./script.js"></script>
 
 </body>
+
 </html>
