major fix in content

--- a/src/chart-files/guardian_multi_boxplot/guardian_multi_boxplot.html
+++ b/src/chart-files/guardian_multi_boxplot/guardian_multi_boxplot.html
@@ -29,9 +29,9 @@
     <div id="information">
         <h3>From this plot i can infer the following details:</h3>
 
-        <li>The maximum grade is scored by the student who drinks once in a week and guarded by mother or father</li>
-        <li>Even if the student drinks five times a day if he is guarded by mother he can score more grade</li>
-        <li>The minimum grade is scored by the student who drinks thrice in a week and guarded by mother</li>
+        <li>The maximum grade score (20) is achieved by students has WALC very low and guarded by mother or father</li>
+        <li>Even with WALC at very high but students’s guardian is mother can still achieve high score</li>
+        
 
     </div>
 
