--- a/src/chart-files/heatmap/heatmap-correlation.html
+++ b/src/chart-files/heatmap/heatmap-correlation.html
@@ -109,5 +109,10 @@
         </script>
     </div>
 
+    <div id="information" float="right">
+        <h2>The data G1, G2 and G3 are the most correlated and needed to see the effects on each other.</h2>
+
+    </div>
+
 
 </html>
