--- a/src/chart-files/histogram/histogram.html
+++ b/src/chart-files/histogram/histogram.html
@@ -20,11 +20,11 @@
         <div id="Histogram" float="left"></div>
 
         <div id="information" float="right">
-            <h3>I can Infer the follow details:</h3>
-
-            <li>There is no person in the sample who didn't drink at all</li>
-            <li>Most of them drink once in the week</li>
-            <li>The student who drink 5 times a week is very less</li>
+            <h3>It can be infered the following details:</h3>
+            
+            <li>Most of them drink at a very low level in the week</li>
+            <li>The student who drink at a very high in a week is very less</li>
+            <li>The trend of the histogram is decreasing</li>
         </div>
     </div>
 
