--- a/src/chart-files/swamplot/swarmplot.html
+++ b/src/chart-files/swamplot/swarmplot.html
@@ -7,9 +7,19 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
     <link rel="stylesheet" href="../../main-style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <div id="my_dataviz"></div>
 <script src="./script.js"></script>
+
+<div id="information">
+    <h3>I can Infer the follow details(Assume that student who score greater than average mean pass and lower than average mean fail):</h3>
+
+    <li>The number of students who pass are higher than the number of students who fail in Very Low, Low, Average</li>
+    <li>The number of students who pass are mostly equal the number of students who fail in High and Very High</li>
+    <li>Mostly student have the highest score drink very less</li>
+    <li>Some student drink high and very high can still get good grade. The maximum grade is 18/20 for student in these level </li>
+</div>
 
 </html>
