--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./src/main-style.css">
     <link rel="stylesheet" href="./node_modules/animate.css/animate.css">
     <script src="https://d3js.org/d3.v4.js"></script>
-    <link href="./onepagescroll.css" rel="stylesheet">
-    <script src="./onepagescroll.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/onepage-scroll@1.3.0/onepage-scroll.css">
+    <script src="https://cdn.jsdelivr.net/npm/onepage-scroll@1.3.0/jquery.onepage-scroll.js"></script>
     <title>Alcoholism in students</title>
 </head>
 
@@ -134,14 +135,14 @@
 
         <section id="section8" class="wide">
             <embed type="text/html" src="./src/chart-files/swamplot/swarmplot.html"
-                style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="70%" height="90%">
+                style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;" width="100%" height="90%">
 
         </section>
     </div>
 
 
     <script>
-        onepagescroll('div#fullpage');
+        $('#fullpage').onepage_scroll();
     </script>
 
 </body>
