--- a/src/chart-files/swamplot/swarmplot.html
+++ b/src/chart-files/swamplot/swarmplot.html
@@ -14,7 +14,7 @@
 <script src="./script.js"></script>
 <div id="information" float="right">
 
-    <h3>I can Infer the follow details(Assume that student who score greater than average mean pass and lower than average mean fail):</h3>
+    <h3>It can be inferred the follow details (Assume that student who score greater than average mean pass and lower than average mean fail):</h3>
 
     <li>The number of students who pass are higher than the number of students who fail in Very Low, Low, Average</li>
     <li>The number of students who pass are mostly equal the number of students who fail in High and Very High</li>
