added summary and minor details fixed

--- a/src/chart-files/guardian_multi_boxplot/guardian_multi_boxplot.html
+++ b/src/chart-files/guardian_multi_boxplot/guardian_multi_boxplot.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../main-style.css">
     <link rel="stylesheet" href="../../../node_modules/animate.css/animate.css">
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
