--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div id="information">
                 <h3>The data is about the amount of alcohol consumption of students. The project aim is to see whether using alcohol inside school can affect grades. By analyzing and visualizing, the results has been concluded:</h3>
 
-                <li>Using alcohol specifically has an enormous effect on students. The severity is based on the frequency of use. By analyzing, the result is that students who consume alcohol more than three times a week can have bad performance in school, and therefore tend to have lower grades than others who do not use alcohol frequently.</li>
+                <li>Using alcohol specifically has an enormous effect on students. The severity is based on the frequency of use. By analyzing, the result is that students who consume alcohol more than average in a week can have bad performance in school, and therefore tend to have lower grades than others who do not use alcohol frequently.</li>
                 <li>Parents can be a perfect guide for students. Students with caring parents can also achieve high scores with high frequent alcohol consumption. </li>
     
             </div>
